--- a/client/web-app/styles/sass/sass-style/views/player.scss
+++ b/client/web-app/styles/sass/sass-style/views/player.scss
@@ -71,7 +71,6 @@
     }
     #programInfo {
         z-index: 10;
-        display:table-cell;
         display:inline-block;
         margin-left:1px;
         background: transparent;
